Fix dropzone bg color for dark mode

--- a/apps/block_scout_web/assets/css/theme/_dark-theme.scss
+++ b/apps/block_scout_web/assets/css/theme/_dark-theme.scss
@@ -1075,6 +1075,9 @@ $dark-stakes-banned-background: #3e314c;
 	.custom-power-input {
 		border-color: $dark-primary;
 	}
+	.dropzone-1 {
+		background-color: $dark-light !important;
+	}
 }
 
 .navbar-dark .navbar-toggler {
